Bug 43719 - drm-core-next + AGP RV670 = Oops
Summary: drm-core-next + AGP RV670 = Oops
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-11 09:45 UTC by Andy Furniss
Modified: 2012-01-06 08:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Fix agp on top of ttm tt rework (4.65 KB, patch)
2012-01-03 14:40 UTC, Jerome Glisse
no flags Details | Splinter Review

Description Andy Furniss 2011-12-11 09:45:22 UTC
I don't use this box any more as such, and this is the first drm-core-next I've tried on it (Previous Kernel was d-r-t).

On loading kms I loose display, but the box is still alive.

startx hangs though, needing SysRq last line in xorg log drmOpenDevice: node name is /dev/dri/card0

From kernel log -

 

Dec 11 17:16:36 nf7 kernel: [drm] Initialized drm 1.1.0 20060810
Dec 11 17:16:37 nf7 kernel: [drm] radeon kernel modesetting enabled.
Dec 11 17:16:37 nf7 kernel: ACPI: PCI Interrupt Link [APC4] enabled at IRQ 19
Dec 11 17:16:37 nf7 kernel: radeon 0000:02:00.0: PCI INT A -> Link[APC4] -> GSI 19 (level, high) -> IRQ 19
Dec 11 17:16:37 nf7 kernel: [drm] initializing kernel modesetting (RV670 0x1002:0x9515 0x174B:0x0028).
Dec 11 17:16:37 nf7 kernel: [drm] register mmio base: 0xE1000000
Dec 11 17:16:37 nf7 kernel: [drm] register mmio size: 65536
Dec 11 17:16:37 nf7 kernel: ATOM BIOS: 
Dec 11 17:16:37 nf7 kernel: [drm] AGP mode requested: 8
Dec 11 17:16:37 nf7 kernel: agpgart-nvidia 0000:00:00.0: AGP 3.0 bridge
Dec 11 17:16:37 nf7 kernel: agpgart-nvidia 0000:00:00.0: putting AGP V3 device into 8x mode
Dec 11 17:16:37 nf7 kernel: radeon 0000:02:00.0: putting AGP V3 device into 8x mode
Dec 11 17:16:37 nf7 kernel: radeon 0000:02:00.0: GTT: 256M 0xC0000000 - 0xCFFFFFFF
Dec 11 17:16:37 nf7 kernel: radeon 0000:02:00.0: VRAM: 512M 0xA0000000 - 0xBFFFFFFF (512M used)
Dec 11 17:16:37 nf7 kernel: [drm] Detected VRAM RAM=512M, BAR=256M
Dec 11 17:16:37 nf7 kernel: [drm] RAM width 256bits DDR
Dec 11 17:16:37 nf7 kernel: [TTM] Zone  kernel: Available graphics memory: 451408 kiB.
Dec 11 17:16:37 nf7 kernel: [TTM] Initializing pool allocator.
Dec 11 17:16:37 nf7 kernel: [drm] radeon: 512M of VRAM memory ready
Dec 11 17:16:37 nf7 kernel: [drm] radeon: 256M of GTT memory ready.
Dec 11 17:16:37 nf7 kernel: [drm] Supports vblank timestamp caching Rev 1 (10.10.2010).
Dec 11 17:16:37 nf7 kernel: [drm] Driver supports precise vblank timestamp query.
Dec 11 17:16:37 nf7 kernel: [drm] radeon: irq initialized.
Dec 11 17:16:37 nf7 kernel: [drm] GART: num cpu pages 65536, num gpu pages 65536
Dec 11 17:16:37 nf7 kernel: [drm] Loading RV670 Microcode
Dec 11 17:16:37 nf7 kernel: BUG: unable to handle kernel NULL pointer dereference at   (null)
Dec 11 17:16:37 nf7 kernel: IP: [<f9cea750>] radeon_ttm_tt_populate+0xb0/0x160 [radeon]
Dec 11 17:16:37 nf7 kernel: *pde = 00000000 
Dec 11 17:16:37 nf7 kernel: Oops: 0002 [#1] PREEMPT 
Dec 11 17:16:37 nf7 kernel: Modules linked in: radeon(+) ttm drm_kms_helper drm i2c_algo_bit i2c_core cfbcopyarea cfbimgblt cfbfillrect fbcon font bitblit softcursor fb fbdev ehci_hcd nvidia_agp agpgart ohci_hcd usbhid usbcore usb_common snd_intel8x0 snd_ac97_codec ac97_bus forcedeth
Dec 11 17:16:37 nf7 kernel: 
Dec 11 17:16:37 nf7 kernel: Pid: 2313, comm: modprobe Not tainted 3.2.0-rc1-10801-g32faa34 #1    /NF7-S/NF7 (nVidia-nForce2)
Dec 11 17:16:37 nf7 kernel: EIP: 0060:[<f9cea750>] EFLAGS: 00010202 CPU: 0
Dec 11 17:16:37 nf7 kernel: EIP is at radeon_ttm_tt_populate+0xb0/0x160 [radeon]
Dec 11 17:16:37 nf7 kernel: EAX: 3311c000 EBX: c14ec4c0 ECX: 00000000 EDX: 00000000
Dec 11 17:16:37 nf7 kernel: ESI: 00000000 EDI: f306cd20 EBP: f60e7bb0 ESP: f60e7b7c
Dec 11 17:16:37 nf7 kernel:  DS: 007b ES: 007b FS: 0000 GS: 0033 SS: 0068
Dec 11 17:16:37 nf7 kernel: Process modprobe (pid: 2313, ti=f60e6000 task=f7310290 task.ti=f60e6000)
Dec 11 17:16:37 nf7 kernel: Stack:
Dec 11 17:16:37 nf7 kernel:  00001000 00000000 00000000 00000000 00000000 f696e000 f60e7bf8 00000000
Dec 11 17:16:37 nf7 kernel:  f694882c f8b6ff0e f306cd20 f60e7c1c f696e44c f60e7bc0 f8b6fcab f694882c
Dec 11 17:16:37 nf7 kernel:  00000000 f60e7bf8 f8b70fb7 f696e43c f696e494 f8010114 f6948860 00000000
Dec 11 17:16:37 nf7 kernel: Call Trace:
Dec 11 17:16:37 nf7 kernel:  [<f8b6ff0e>] ? ttm_tt_set_placement_caching+0xe/0x1c0 [ttm]
Dec 11 17:16:37 nf7 kernel:  [<f8b6fcab>] ttm_tt_bind+0x3b/0x60 [ttm]
Dec 11 17:16:37 nf7 kernel:  [<f8b70fb7>] ttm_bo_handle_move_mem+0x2e7/0x320 [ttm]
Dec 11 17:16:37 nf7 kernel:  [<f8b72425>] ttm_bo_move_buffer+0x105/0x120 [ttm]
Dec 11 17:16:37 nf7 kernel:  [<f8b6f584>] ? ttm_mem_global_alloc_zone+0xc4/0x150 [ttm]
Dec 11 17:16:37 nf7 kernel:  [<f8b724e5>] ttm_bo_validate+0xa5/0x150 [ttm]
Dec 11 17:16:37 nf7 kernel:  [<f8b72852>] ttm_bo_init+0x2c2/0x3b0 [ttm]
Dec 11 17:16:37 nf7 kernel:  [<f9ceb7cc>] radeon_bo_create+0x1ac/0x2b0 [radeon]
Dec 11 17:16:37 nf7 kernel:  [<f9ceb8d0>] ? radeon_bo_create+0x2b0/0x2b0 [radeon]
Dec 11 17:16:37 nf7 kernel:  [<f9cd6f8d>] radeon_wb_init+0x17d/0x1b0 [radeon]
Dec 11 17:16:37 nf7 kernel:  [<f9d15d3a>] r600_startup+0x27a/0x7b0 [radeon]
Dec 11 17:16:37 nf7 kernel:  [<f9cebdab>] ? radeon_gart_table_vram_alloc+0x4b/0x60 [radeon]
Dec 11 17:16:37 nf7 kernel:  [<f9d164bf>] r600_init+0x12f/0x280 [radeon]
Dec 11 17:16:37 nf7 kernel:  [<f9cd72c8>] radeon_device_init+0x308/0x4f0 [radeon]
Dec 11 17:16:37 nf7 kernel:  [<f9cd5ba0>] ? radeon_combios_fini+0x10/0x10 [radeon]
Dec 11 17:16:37 nf7 kernel:  [<f9cd8574>] radeon_driver_load_kms+0x84/0x110 [radeon]
Dec 11 17:16:37 nf7 kernel:  [<f8b08741>] drm_get_pci_dev+0x141/0x250 [drm]
Dec 11 17:16:37 nf7 kernel:  [<c10c6ecf>] ? kmem_cache_alloc_trace+0x3f/0x120
Dec 11 17:16:37 nf7 kernel:  [<c11216be>] ? sysfs_do_create_link+0x14e/0x1c0
Dec 11 17:16:37 nf7 kernel:  [<f9d35015>] radeon_pci_probe+0x85/0xb8 [radeon]
Dec 11 17:16:37 nf7 kernel:  [<c122c613>] local_pci_probe+0x13/0x20
Dec 11 17:16:37 nf7 kernel:  [<c122ce0f>] pci_device_probe+0x5f/0x90
Dec 11 17:16:37 nf7 kernel:  [<c128d7be>] driver_probe_device+0xfe/0x180
Dec 11 17:16:37 nf7 kernel:  [<c122c7ac>] ? pci_match_device+0xcc/0xe0
Dec 11 17:16:37 nf7 kernel:  [<c128da68>] __driver_attach+0x78/0x80
Dec 11 17:16:37 nf7 kernel:  [<c128cac9>] bus_for_each_dev+0x49/0x70
Dec 11 17:16:37 nf7 kernel:  [<c122c620>] ? local_pci_probe+0x20/0x20
Dec 11 17:16:37 nf7 kernel:  [<c128d59e>] driver_attach+0x1e/0x20
Dec 11 17:16:37 nf7 kernel:  [<c128d9f0>] ? device_attach+0x80/0x80
Dec 11 17:16:37 nf7 kernel:  [<c128d2f9>] bus_add_driver+0xb9/0x220
Dec 11 17:16:37 nf7 kernel:  [<c122c620>] ? local_pci_probe+0x20/0x20
Dec 11 17:16:37 nf7 kernel:  [<c128dfbf>] driver_register+0x5f/0x120
Dec 11 17:16:37 nf7 kernel:  [<c107b696>] ? get_tracepoint+0x16/0x180
Dec 11 17:16:37 nf7 kernel:  [<f8b7d000>] ? 0xf8b7cfff
Dec 11 17:16:37 nf7 kernel:  [<c122d09e>] __pci_register_driver+0x3e/0xb0
Dec 11 17:16:37 nf7 kernel:  [<f8b7d000>] ? 0xf8b7cfff
Dec 11 17:16:37 nf7 kernel:  [<f8b08932>] drm_pci_init+0xe2/0xf0 [drm]
Dec 11 17:16:37 nf7 kernel:  [<c1032100>] ? printk+0x20/0x30
Dec 11 17:16:37 nf7 kernel:  [<f8b7d000>] ? 0xf8b7cfff
Dec 11 17:16:37 nf7 kernel:  [<f8b7d04f>] radeon_init+0x4f/0xe1 [radeon]
Dec 11 17:16:37 nf7 kernel:  [<c1001202>] do_one_initcall+0x112/0x160
Dec 11 17:16:37 nf7 kernel:  [<c105385f>] ? blocking_notifier_call_chain+0x1f/0x30
Dec 11 17:16:37 nf7 kernel:  [<c1067f5e>] sys_init_module+0x6e/0x1c0
Dec 11 17:16:37 nf7 kernel:  [<c10caa42>] ? sys_read+0x42/0x70
Dec 11 17:16:37 nf7 kernel:  [<c13988cc>] sysenter_do_call+0x12/0x22
Dec 11 17:16:37 nf7 kernel: Code: 00 00 00 c7 44 24 04 00 00 00 00 c7 04 24 00 10 00 00 8d 59 5c 85 c9 0f 45 c3 8b 1d 80 c3 4e c1 31 c9 ff 53 08 8b 55 d8 8b 4d dc 
Dec 11 17:16:37 nf7 kernel: <89> 04 0a 8b 47 2c 8b 14 b0 8b 45 e0 8b 58 08 a1 80 c3 4e c1 8b 
Dec 11 17:16:37 nf7 kernel: EIP: [<f9cea750>] radeon_ttm_tt_populate+0xb0/0x160 [radeon] SS:ESP 0068:f60e7b7c
Dec 11 17:16:37 nf7 kernel: CR2: 0000000000000000
Dec 11 17:16:37 nf7 kernel: ---[ end trace bb806ad23ac5c0ae ]---
Comment 1 Andy Furniss 2011-12-15 09:20:05 UTC
(In reply to comment #0)
> I don't use this box any more as such, and this is the first drm-core-next ..

I tested some more and the latest working commit is

commit 822c4d9ae0d55a4fcea9f0a462bc6406a06692e2
Author: Jerome Glisse <jglisse@redhat.com>
Date:   Thu Nov 10 18:24:09 2011 -0500

 drm/ttm: page allocation use page array instead of list

Starting with the commit following that - 

commit 649bf3ca77343e3be1e0af8e21356fa569b1abd9
Author: Jerome Glisse <jglisse@redhat.com>
Date:   Tue Nov 1 20:46:13 2011 -0400

  drm/ttm: merge ttm_backend and ttm_tt V5

I get an Oops - but it is not the same as the one on head, I can start kms and fbcon is working.

When I startx I get-

Dec 15 17:28:34 nf7 kernel: [drm] Initialized drm 1.1.0 20060810
Dec 15 17:28:35 nf7 kernel: [drm] radeon kernel modesetting enabled.
Dec 15 17:28:35 nf7 kernel: ACPI: PCI Interrupt Link [APC4] enabled at IRQ 19
Dec 15 17:28:35 nf7 kernel: radeon 0000:02:00.0: PCI INT A -> Link[APC4] -> GSI 19 (level, high) -> IRQ 19
Dec 15 17:28:35 nf7 kernel: [drm] initializing kernel modesetting (RV670 0x1002:0x9515 0x174B:0x0028).
Dec 15 17:28:35 nf7 kernel: [drm] register mmio base: 0xE1000000
Dec 15 17:28:35 nf7 kernel: [drm] register mmio size: 65536
Dec 15 17:28:35 nf7 kernel: ATOM BIOS: 
Dec 15 17:28:35 nf7 kernel: [drm] AGP mode requested: 8
Dec 15 17:28:35 nf7 kernel: agpgart-nvidia 0000:00:00.0: AGP 3.0 bridge
Dec 15 17:28:35 nf7 kernel: agpgart-nvidia 0000:00:00.0: putting AGP V3 device into 8x mode
Dec 15 17:28:35 nf7 kernel: radeon 0000:02:00.0: putting AGP V3 device into 8x mode
Dec 15 17:28:35 nf7 kernel: radeon 0000:02:00.0: GTT: 256M 0xC0000000 - 0xCFFFFFFF
Dec 15 17:28:35 nf7 kernel: radeon 0000:02:00.0: VRAM: 512M 0xA0000000 - 0xBFFFFFFF (512M used)
Dec 15 17:28:35 nf7 kernel: [drm] Detected VRAM RAM=512M, BAR=256M
Dec 15 17:28:35 nf7 kernel: [drm] RAM width 256bits DDR
Dec 15 17:28:35 nf7 kernel: [TTM] Zone  kernel: Available graphics memory: 451408 kiB.
Dec 15 17:28:35 nf7 kernel: [TTM] Initializing pool allocator.
Dec 15 17:28:35 nf7 kernel: [drm] radeon: 512M of VRAM memory ready
Dec 15 17:28:35 nf7 kernel: [drm] radeon: 256M of GTT memory ready.
Dec 15 17:28:35 nf7 kernel: [drm] Supports vblank timestamp caching Rev 1 (10.10.2010).
Dec 15 17:28:35 nf7 kernel: [drm] Driver supports precise vblank timestamp query.
Dec 15 17:28:35 nf7 kernel: [drm] radeon: irq initialized.
Dec 15 17:28:35 nf7 kernel: [drm] GART: num cpu pages 65536, num gpu pages 65536
Dec 15 17:28:35 nf7 kernel: [drm] Loading RV670 Microcode
Dec 15 17:28:35 nf7 kernel: radeon 0000:02:00.0: WB disabled
Dec 15 17:28:35 nf7 kernel: [drm] ring test succeeded in 0 usecs
Dec 15 17:28:35 nf7 kernel: [drm] radeon: ib pool ready.
Dec 15 17:28:35 nf7 kernel: [drm] ib test succeeded in 0 usecs
Dec 15 17:28:35 nf7 kernel: [drm] Radeon Display Connectors
Dec 15 17:28:35 nf7 kernel: [drm] Connector 0:
Dec 15 17:28:35 nf7 kernel: [drm]   DVI-I
Dec 15 17:28:35 nf7 kernel: [drm]   HPD1
Dec 15 17:28:35 nf7 kernel: [drm]   DDC: 0x7e50 0x7e50 0x7e54 0x7e54 0x7e58 0x7e58 0x7e5c 0x7e5c
Dec 15 17:28:35 nf7 kernel: [drm]   Encoders:
Dec 15 17:28:35 nf7 kernel: [drm]     DFP1: INTERNAL_KLDSCP_TMDS1
Dec 15 17:28:35 nf7 kernel: [drm]     CRT2: INTERNAL_KLDSCP_DAC2
Dec 15 17:28:35 nf7 kernel: [drm] Connector 1:
Dec 15 17:28:35 nf7 kernel: [drm]   DIN
Dec 15 17:28:35 nf7 kernel: [drm]   Encoders:
Dec 15 17:28:35 nf7 kernel: [drm]     TV1: INTERNAL_KLDSCP_DAC2
Dec 15 17:28:35 nf7 kernel: [drm] Connector 2:
Dec 15 17:28:35 nf7 kernel: [drm]   DVI-I
Dec 15 17:28:35 nf7 kernel: [drm]   HPD2
Dec 15 17:28:35 nf7 kernel: [drm]   DDC: 0x7e40 0x7e40 0x7e44 0x7e44 0x7e48 0x7e48 0x7e4c 0x7e4c
Dec 15 17:28:35 nf7 kernel: [drm]   Encoders:
Dec 15 17:28:35 nf7 kernel: [drm]     CRT1: INTERNAL_KLDSCP_DAC1
Dec 15 17:28:35 nf7 kernel: [drm]     DFP2: INTERNAL_LVTM1
Dec 15 17:28:35 nf7 kernel: [drm] Internal thermal controller with fan control
Dec 15 17:28:35 nf7 kernel: [drm] radeon: power management initialized
Dec 15 17:28:35 nf7 kernel: [drm] fb mappable at 0xD00C2000
Dec 15 17:28:35 nf7 kernel: [drm] vram apper at 0xD0000000
Dec 15 17:28:35 nf7 kernel: [drm] size 8294400
Dec 15 17:28:35 nf7 kernel: [drm] fb depth is 24
Dec 15 17:28:35 nf7 kernel: [drm]    pitch is 7680
Dec 15 17:28:35 nf7 kernel: fbcon: radeondrmfb (fb0) is primary device
Dec 15 17:28:36 nf7 kernel: Console: switching to colour frame buffer device 240x67
Dec 15 17:28:36 nf7 kernel: fb0: radeondrmfb frame buffer device
Dec 15 17:28:36 nf7 kernel: drm: registered panic notifier
Dec 15 17:28:36 nf7 kernel: [drm] Initialized radeon 2.11.0 20080528 for 0000:02:00.0 on minor 0
Dec 15 17:28:59 nf7 kernel: BUG: unable to handle kernel NULL pointer dereference at 0000001b
Dec 15 17:28:59 nf7 kernel: IP: [<c10cb380>] fput+0x10/0x1f0
Dec 15 17:28:59 nf7 kernel: *pde = 00000000 
Dec 15 17:28:59 nf7 kernel: Oops: 0002 [#1] PREEMPT 
Dec 15 17:28:59 nf7 kernel: Modules linked in: radeon ttm drm_kms_helper drm i2c_algo_bit i2c_core cfbcopyarea cfbimgblt cfbfillrect fbcon font bitblit softcursor fb fbdev nvidia_agp ehci_hcd agpgart ohci_hcd usbhid usbcore usb_common snd_intel8x0 snd_ac97_codec ac97_bus forcedeth
Dec 15 17:28:59 nf7 kernel: 
Dec 15 17:28:59 nf7 kernel: Pid: 2374, comm: Xorg Not tainted 3.2.0-rc1-10793-g649bf3c #4    /NF7-S/NF7 (nVidia-nForce2)
Dec 15 17:28:59 nf7 kernel: EIP: 0060:[<c10cb380>] EFLAGS: 00213246 CPU: 0
Dec 15 17:28:59 nf7 kernel: EIP is at fput+0x10/0x1f0
Dec 15 17:28:59 nf7 kernel: EAX: 00000007 EBX: f31f9fa0 ECX: f7f04fb4 EDX: f31aedc0
Dec 15 17:28:59 nf7 kernel: ESI: 00000002 EDI: 00000007 EBP: f6a5bd6c ESP: f6a5bd48
Dec 15 17:28:59 nf7 kernel:  DS: 007b ES: 007b FS: 0000 GS: 0033 SS: 0068
Dec 15 17:28:59 nf7 kernel: Process Xorg (pid: 2374, ti=f6a5a000 task=f7310e60 task.ti=f6a5a000)
Dec 15 17:28:59 nf7 kernel: Stack:
Dec 15 17:28:59 nf7 kernel:  00001fa0 000007e8 f6a5bd6c f8b6fcf6 f31f9fa0 00000002 f31f9fa0 00000002
Dec 15 17:28:59 nf7 kernel:  f305f250 f6a5bd78 f8b6fda8 f305f22c f6a5bd88 f8b70982 f305f22c f305f22c
Dec 15 17:28:59 nf7 kernel:  f6a5bdb0 f8b733c0 00000000 00000000 0000000b f698a440 00000000 f305f250
Dec 15 17:28:59 nf7 kernel: Call Trace:
Dec 15 17:28:59 nf7 kernel:  [<f8b6fcf6>] ? ttm_tt_free_alloced_pages+0x56/0x70 [ttm]
Dec 15 17:28:59 nf7 kernel:  [<f8b6fda8>] ttm_tt_destroy+0x98/0xe0 [ttm]
Dec 15 17:28:59 nf7 kernel:  [<f8b70982>] ttm_bo_cleanup_memtype_use+0x22/0x60 [ttm]
Dec 15 17:28:59 nf7 kernel:  [<f8b733c0>] ttm_bo_release+0x200/0x260 [ttm]
Dec 15 17:28:59 nf7 kernel:  [<f8b731c0>] ? ttm_bo_device_release+0x130/0x130 [ttm]
Dec 15 17:28:59 nf7 kernel:  [<c121001c>] kref_put+0x2c/0x60
Dec 15 17:28:59 nf7 kernel:  [<f8b70bb8>] ttm_bo_unref+0x28/0x50 [ttm]
Dec 15 17:28:59 nf7 kernel:  [<f9d5526a>] radeon_bo_unref+0x3a/0x60 [radeon]
Dec 15 17:28:59 nf7 kernel:  [<f8a9a360>] ? drm_gem_vm_close+0x60/0x60 [drm]
Dec 15 17:28:59 nf7 kernel:  [<f9d6465d>] radeon_gem_object_free+0x1d/0x20 [radeon]
Dec 15 17:28:59 nf7 kernel:  [<f8a9a387>] drm_gem_object_free+0x27/0x30 [drm]
Dec 15 17:28:59 nf7 kernel:  [<c121001c>] kref_put+0x2c/0x60
Dec 15 17:28:59 nf7 kernel:  [<f8a9a613>] drm_gem_handle_delete+0xa3/0xf0 [drm]
Dec 15 17:28:59 nf7 kernel:  [<f8a9a688>] drm_gem_close_ioctl+0x28/0x30 [drm]
Dec 15 17:28:59 nf7 kernel:  [<f8a9a660>] ? drm_gem_handle_delete+0xf0/0xf0 [drm]
Dec 15 17:28:59 nf7 kernel:  [<f8a98d2b>] drm_ioctl+0x2db/0x440 [drm]
Dec 15 17:28:59 nf7 kernel:  [<c10a39e7>] ? put_page+0x27/0x40
Dec 15 17:28:59 nf7 kernel:  [<c10c17a2>] ? free_page_and_swap_cache+0x22/0x50
Dec 15 17:28:59 nf7 kernel:  [<c10b6903>] ? __tlb_remove_page+0x13/0x20
Dec 15 17:28:59 nf7 kernel:  [<c1023139>] ? ___pte_free_tlb+0x29/0x40
Dec 15 17:28:59 nf7 kernel:  [<c10b6883>] ? free_pgd_range+0x103/0x170
Dec 15 17:28:59 nf7 kernel:  [<c10b728b>] ? free_pgtables+0x8b/0xc0
Dec 15 17:28:59 nf7 kernel:  [<c10b6918>] ? tlb_flush_mmu+0x8/0x30
Dec 15 17:28:59 nf7 kernel:  [<c10b6d61>] ? tlb_finish_mmu+0x11/0x40
Dec 15 17:28:59 nf7 kernel:  [<f8a98a50>] ? drm_version+0xa0/0xa0 [drm]
Dec 15 17:28:59 nf7 kernel:  [<c10d93bb>] vfs_ioctl+0x3b/0x60
Dec 15 17:28:59 nf7 kernel:  [<c10d9553>] do_vfs_ioctl+0x73/0x530
Dec 15 17:28:59 nf7 kernel:  [<c10cb37e>] ? fput+0xe/0x1f0
Dec 15 17:28:59 nf7 kernel:  [<c1395848>] ? sub_preempt_count+0x8/0x90
Dec 15 17:28:59 nf7 kernel:  [<c10b85b0>] ? arch_unmap_area+0x30/0x30
Dec 15 17:28:59 nf7 kernel:  [<c10b8bbf>] ? remove_vma+0x3f/0x50
Dec 15 17:28:59 nf7 kernel:  [<c10b972b>] ? do_munmap+0x1eb/0x260
Dec 15 17:28:59 nf7 kernel:  [<c10cb736>] ? fget_light+0x16/0xb0
Dec 15 17:28:59 nf7 kernel:  [<c10d9a4e>] sys_ioctl+0x3e/0x70
Dec 15 17:28:59 nf7 kernel:  [<c13988cc>] sysenter_do_call+0x12/0x22
Dec 15 17:28:59 nf7 kernel: Code: 89 f8 e8 54 e0 f6 ff 8b 5d f4 8b 75 f8 8b 7d fc c9 c3 89 f6 8d bc 27 00 00 00 00 55 89 e5 57 56 53 83 ec 18 e8 c2 da 2c 00 89 c7 <ff> 48 14 0f 94 c0 84 c0 0f 84 12 01 00 00 8b 47 0c 8b 4f 1c 89 
Dec 15 17:28:59 nf7 kernel: EIP: [<c10cb380>] fput+0x10/0x1f0 SS:ESP 0068:f6a5bd48
Dec 15 17:28:59 nf7 kernel: CR2: 000000000000001b
Dec 15 17:28:59 nf7 kernel: ---[ end trace cf020fedd8442567 ]---
Comment 2 Jerome Glisse 2012-01-03 14:40:19 UTC
Created attachment 55095 [details] [review]
Fix agp on top of ttm tt rework

Should fix the bug let me know
Comment 3 Andy Furniss 2012-01-04 03:53:20 UTC
(In reply to comment #2)
> Created attachment 55095 [details] [review] [review]
> Fix agp on top of ttm tt rework
> 
> Should fix the bug let me know

Yes, this fixes it.
Comment 4 Andy Furniss 2012-01-06 08:34:23 UTC
Patch now in drm-core-next, which is working OK for me.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.